# ChatBot_TuyenSinh

./: .dockerignore  .gitignore  Dockerfile  README.md  client.ipynb  pyproject.toml  requirements.txt  test.py  test2.py
app/: agent.py  anthropic_parser.py  data_verify.py  prompt_templates.py  server.py  session_verify.py  tools.py
data/: Diem_trung_tuyen_nam_gan_nhat_2024.xlsx  Hoc_phi_2024.xlsx  Phuong_thuc_2_xettuyenhocba_2024.xlsx  Phuong_thuc_3_danhgianangluc2024.xlsx  Phuong_thuc_4_dieukienuutien_2024.xlsx  Quy_mo_dao_tao_2024.xlsx  Tinh_hinh_viec_lam_2024.xlsx  de-an-tuyen-sinh-dhntt-2024-v02-web.txt  nang_khieu.txt  nganh_2024.xlsx
database/: my_database.db
vector_database/faiss_index_Diem_trung_tuyen_nam_gan_nhat_2024/: index.faiss  index.pkl
vector_database/faiss_index_Hoc_phi_2024/: index.faiss  index.pkl
vector_database/faiss_index_Phuong_thuc_2_xettuyenhocba_2024/: index.faiss  index.pkl
vector_database/faiss_index_Phuong_thuc_3_danhgianangluc2024/: index.faiss  index.pkl
vector_database/faiss_index_Phuong_thuc_4_dieukienuutien_2024/: index.faiss  index.pkl
vector_database/faiss_index_Quy_mo_dao_tao_2024/: index.faiss  index.pkl
vector_database/faiss_index_Tinh_hinh_viec_lam_2024/: index.faiss  index.pkl
vector_database/faiss_index_de-an-tuyen-sinh-dhntt-2024-v02-web/: index.faiss  index.pkl
vector_database/faiss_index_nang_khieu/: index.faiss  index.pkl
vector_database/faiss_index_nganh_2024/: index.faiss  index.pkl
